syntax = "proto3";
option java_package = "io.grpc.examples";
option objc_class_prefix = "HLW";
package gamesN;
service GamesLibrary{
  rpc GetGames(Session_Id) returns (stream Game) {}
  rpc ModifyGame(GameID) returns (Game) {}
  rpc AddGame(GameUID) returns (Result) {}
  rpc DeleteGame(GameUID) returns (Result) {}
  rpc Login(User) returns (Session_Id) {}
  rpc Logout(Session_Id) returns (Result) {}
}
message User {
  string name=1;
  string passwd=2;
}

message Session_Id {
string id=1;
}

message Result {
string success=1;
}

message Game{
  int32 gid=1;
  string name=2;
  int32 price=3;
}

message GameID{
  int32 id=1;
  int32 gid=2;
}

message GameUID{
  string uid=1;
  int32 gID=2;
  string name=3;
  int32 price=4;
}
